--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_tracker
-	base = 494edd9
-	trimbase = 
+	base = 8f9e962
+	trimbase = 494edd9
 	parent = upstream
 	previous = bb9e668
