--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_bridge
-	base = 3192f69
-	trimbase = 
+	base = 2df5dc4
+	trimbase = 3192f69
 	parent = upstream
 	previous = bb9e668
