--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_camera_calibration
-	base = 7b2f553
-	trimbase = 
+	base = e69272c
+	trimbase = 7b2f553
 	parent = upstream
 	previous = 3add013
