--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_hand2eye_calibration
-	base = 0ade884
-	trimbase = 
+	base = c403fd9
+	trimbase = 0ade884
 	parent = upstream
 	previous = 3add013
