--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = vision_visp
-	base = f489458
-	trimbase = 
+	base = 29bc7a2
+	trimbase = f489458
 	parent = upstream
 	previous = 3add013
