--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_auto_tracker
-	base = 56adba3
-	trimbase = 
+	base = 8ed3519
+	trimbase = 56adba3
 	parent = upstream
 	previous = 3add013
