--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_tracker
-	base = c010a74
-	trimbase = 
+	base = 6565b90
+	trimbase = c010a74
 	parent = upstream
 	previous = 3add013
