--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_bridge
-	base = e9655d9
-	trimbase = 
+	base = 6594a55
+	trimbase = e9655d9
 	parent = upstream
 	previous = 3add013
