Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.7.2": ["Fabien Spindler", "Fabien.Spindler@inria.fr"], "0.7.0": ["Fabien Spindler", "Fabien.Spindler@inria.fr"]}
+{"0.7.2": ["Fabien Spindler", "Fabien.Spindler@inria.fr"], "0.7.3": ["Fabien Spindler", "Fabien.Spindler@inria.fr"], "0.7.0": ["Fabien Spindler", "Fabien.Spindler@inria.fr"]}
