--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_camera_calibration
 	base = a63b5ed
-	trimbase = 3fe55b4
+	trimbase = 
 	parent = upstream
 	previous = bb9e668
