--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_camera_calibration
-	base = 16560b4
-	trimbase = 
+	base = b725de6
+	trimbase = 16560b4
 	parent = upstream
 	previous = 977b851
