--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_hand2eye_calibration
 	base = 83108bb
-	trimbase = 8274999
+	trimbase = 
 	parent = upstream
 	previous = bb9e668
