--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_hand2eye_calibration
-	base = 46ea51f
-	trimbase = 
+	base = e795d47
+	trimbase = 46ea51f
 	parent = upstream
 	previous = 977b851
