--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_auto_tracker
-	base = 4039685
-	trimbase = 
+	base = 6dfb844
+	trimbase = 4039685
 	parent = upstream
 	previous = 977b851
