--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_tracker
-	base = 7fb8bd5
-	trimbase = 
+	base = 69566cd
+	trimbase = 7fb8bd5
 	parent = upstream
 	previous = 977b851
