--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_bridge
-	base = 061fe0d
-	trimbase = 
+	base = c7164be
+	trimbase = 061fe0d
 	parent = upstream
 	previous = 977b851
