--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_camera_calibration
 	base = e69272c
-	trimbase = 7b2f553
+	trimbase = 
 	parent = upstream
 	previous = 3add013
