--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_hand2eye_calibration
-	base = f466085
-	trimbase = 
+	base = 647c3f5
+	trimbase = f466085
 	parent = upstream
 	previous = 2df3ff4
