--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = vision_visp
-	base = befa007
-	trimbase = 
+	base = b6ccd3d
+	trimbase = befa007
 	parent = upstream
 	previous = 2df3ff4
