--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_auto_tracker
-	base = c5bc15f
-	trimbase = 
+	base = b2359cc
+	trimbase = c5bc15f
 	parent = upstream
 	previous = 2df3ff4
