--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_tracker
-	base = 0a60b5b
-	trimbase = 
+	base = 295623e
+	trimbase = 0a60b5b
 	parent = upstream
 	previous = 2df3ff4
