--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_bridge
-	base = bc4d32b
-	trimbase = 
+	base = 72d73db
+	trimbase = bc4d32b
 	parent = upstream
 	previous = 2df3ff4
