--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_camera_calibration
 	base = 649748e
-	trimbase = 62edfb3
+	trimbase = 
 	parent = upstream
 	previous = 0983088
