--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_hand2eye_calibration
 	base = bb1010b
-	trimbase = dbe812d
+	trimbase = 
 	parent = upstream
 	previous = 0983088
