--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_hand2eye_calibration
-	base = 31b8a58
-	trimbase = 
+	base = 684e407
+	trimbase = 31b8a58
 	parent = upstream
 	previous = 36f369f
