--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = vision_visp
-	base = 1bca4b7
-	trimbase = 
+	base = a299904
+	trimbase = 1bca4b7
 	parent = upstream
 	previous = 36f369f
