--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_auto_tracker
-	base = b4db2a3
-	trimbase = 
+	base = 1436a7e
+	trimbase = b4db2a3
 	parent = upstream
 	previous = 36f369f
