--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_tracker
-	base = abd1f62
-	trimbase = 
+	base = 20a7586
+	trimbase = abd1f62
 	parent = upstream
 	previous = 36f369f
