--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_bridge
-	base = e3f5178
-	trimbase = 
+	base = 71605f8
+	trimbase = e3f5178
 	parent = upstream
 	previous = 36f369f
