--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_camera_calibration
 	base = f9787d1
-	trimbase = bdbe03f
+	trimbase = 
 	parent = upstream
 	previous = 2df3ff4
