--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_hand2eye_calibration
 	base = 647c3f5
-	trimbase = f466085
+	trimbase = 
 	parent = upstream
 	previous = 2df3ff4
