--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = vision_visp
-	base = 1aba24e
-	trimbase = 
+	base = d16085f
+	trimbase = 1aba24e
 	parent = upstream
 	previous = 9d5e254
