--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_auto_tracker
-	base = c8871e5
-	trimbase = 
+	base = 99bcb7c
+	trimbase = c8871e5
 	parent = upstream
 	previous = 9d5e254
