--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_tracker
-	base = 72ee2d8
-	trimbase = 
+	base = c3dd1f1
+	trimbase = 72ee2d8
 	parent = upstream
 	previous = 9d5e254
