--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_bridge
-	base = 7eebeba
-	trimbase = 
+	base = 7e0ca9f
+	trimbase = 7eebeba
 	parent = upstream
 	previous = 9d5e254
