--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_camera_calibration
-	base = fe61249
-	trimbase = 
+	base = 6737615
+	trimbase = fe61249
 	parent = upstream
 	previous = 266f38b
