--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_hand2eye_calibration
-	base = 9f1c829
-	trimbase = 
+	base = 8b937d9
+	trimbase = 9f1c829
 	parent = upstream
 	previous = 266f38b
