--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_auto_tracker
-	base = cb883a7
-	trimbase = 
+	base = f298dca
+	trimbase = cb883a7
 	parent = upstream
 	previous = 266f38b
