--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_tracker
-	base = e583dea
-	trimbase = 
+	base = 8eab37c
+	trimbase = e583dea
 	parent = upstream
 	previous = 266f38b
