--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_bridge
-	base = 078c59c
-	trimbase = 
+	base = 567a8a6
+	trimbase = 078c59c
 	parent = upstream
 	previous = 266f38b
