--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_camera_calibration
 	base = d51aad5
-	trimbase = 5015bd0
+	trimbase = 
 	parent = upstream
 	previous = 9d5e254
