--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_camera_calibration
-	base = d1055db
-	trimbase = 
+	base = a88c373
+	trimbase = d1055db
 	parent = upstream
 	previous = 23d2386
