--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_hand2eye_calibration
 	base = 4063fbb
-	trimbase = 190274b
+	trimbase = 
 	parent = upstream
 	previous = 9d5e254
