--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_hand2eye_calibration
-	base = a4f905e
-	trimbase = 
+	base = 9d47601
+	trimbase = a4f905e
 	parent = upstream
 	previous = 23d2386
