--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = vision_visp
-	base = 051170f
-	trimbase = 
+	base = ae444c4
+	trimbase = 051170f
 	parent = upstream
 	previous = 23d2386
