--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_auto_tracker
-	base = 5104f90
-	trimbase = 
+	base = 4641c32
+	trimbase = 5104f90
 	parent = upstream
 	previous = 23d2386
