--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_tracker
-	base = 2c11e59
-	trimbase = 
+	base = 7c2be4e
+	trimbase = 2c11e59
 	parent = upstream
 	previous = 23d2386
