--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_bridge
-	base = 50bfb76
-	trimbase = 
+	base = 3b4f574
+	trimbase = 50bfb76
 	parent = upstream
 	previous = 23d2386
