--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4641c32
+	base = 88b9cad
 	trimbase = 
 	parent = release/indigo/visp_auto_tracker
-	previous = 
+	previous = 4641c32
