--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dc265a2
+	base = 7c7db9d
 	trimbase = 
 	parent = rpm/indigo/visp_auto_tracker
-	previous = 
+	previous = dc265a2
