--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9d47601
+	base = 9ab3f52
 	trimbase = 
 	parent = release/indigo/visp_hand2eye_calibration
-	previous = 
+	previous = 9d47601
