--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 64ec6d8
+	base = 6975d6c
 	trimbase = 
 	parent = rpm/indigo/visp_hand2eye_calibration
-	previous = 
+	previous = 64ec6d8
