--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3b4f574
+	base = 6fb9bcd
 	trimbase = 
 	parent = release/indigo/visp_bridge
-	previous = 
+	previous = 3b4f574
