--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 87a0736
+	base = 320bc14
 	trimbase = 
 	parent = rpm/indigo/visp_bridge
-	previous = 
+	previous = 87a0736
