--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a88c373
+	base = 8619f74
 	trimbase = 
 	parent = release/indigo/visp_camera_calibration
-	previous = 
+	previous = a88c373
