--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 480a21e
+	base = 8c9cc44
 	trimbase = 
 	parent = rpm/indigo/visp_camera_calibration
-	previous = 
+	previous = 480a21e
