--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7c2be4e
+	base = 6841201
 	trimbase = 
 	parent = release/indigo/visp_tracker
-	previous = 
+	previous = 7c2be4e
