--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = eb98d10
+	base = d66582f
 	trimbase = 
 	parent = rpm/indigo/visp_tracker
-	previous = 
+	previous = eb98d10
