--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ae444c4
+	base = 87612d8
 	trimbase = 
 	parent = release/indigo/vision_visp
-	previous = 
+	previous = ae444c4
