--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 002e451
+	base = 40ebcd7
 	trimbase = 
 	parent = rpm/indigo/vision_visp
-	previous = 
+	previous = 002e451
