--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_camera_calibration
 	base = 6737615
-	trimbase = fe61249
+	trimbase = 
 	parent = upstream
 	previous = 266f38b
