--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_camera_calibration
-	base = 3b4f3c7
-	trimbase = 
+	base = 3cf064f
+	trimbase = 3b4f3c7
 	parent = upstream
 	previous = 373b024
