--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_hand2eye_calibration
-	base = e6c9330
-	trimbase = 
+	base = 3432957
+	trimbase = e6c9330
 	parent = upstream
 	previous = 373b024
