--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = vision_visp
-	base = aa95d5a
-	trimbase = 
+	base = e7f351c
+	trimbase = aa95d5a
 	parent = upstream
 	previous = 373b024
