--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_auto_tracker
-	base = 75672ff
-	trimbase = 
+	base = 528406c
+	trimbase = 75672ff
 	parent = upstream
 	previous = 373b024
