--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_tracker
-	base = e6632cf
-	trimbase = 
+	base = ee4462e
+	trimbase = e6632cf
 	parent = upstream
 	previous = 373b024
