--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_bridge
-	base = d3f33bf
-	trimbase = 
+	base = 8df9216
+	trimbase = d3f33bf
 	parent = upstream
 	previous = 373b024
