--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3432957
+	base = 808cb88
 	trimbase = 
 	parent = release/hydro/visp_hand2eye_calibration
-	previous = 
+	previous = 3432957
