--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 98db702
+	base = 784a0fc
 	trimbase = 
 	parent = rpm/hydro/visp_hand2eye_calibration
-	previous = 
+	previous = 98db702
