--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3cf064f
+	base = 76f05f6
 	trimbase = 
 	parent = release/hydro/visp_camera_calibration
-	previous = 
+	previous = 3cf064f
