--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f52955f
+	base = 4ef7a8b
 	trimbase = 
 	parent = rpm/hydro/visp_camera_calibration
-	previous = 
+	previous = f52955f
