--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 528406c
+	base = efd7657
 	trimbase = 
 	parent = release/hydro/visp_auto_tracker
-	previous = 
+	previous = 528406c
