--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a7162de
+	base = 36ed519
 	trimbase = 
 	parent = rpm/hydro/visp_auto_tracker
-	previous = 
+	previous = a7162de
