--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8df9216
+	base = 70901c9
 	trimbase = 
 	parent = release/hydro/visp_bridge
-	previous = 
+	previous = 8df9216
