--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 38cd20b
+	base = 6157dfb
 	trimbase = 
 	parent = rpm/hydro/visp_bridge
-	previous = 
+	previous = 38cd20b
