--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ee4462e
+	base = f7cb150
 	trimbase = 
 	parent = release/hydro/visp_tracker
-	previous = 
+	previous = ee4462e
