--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 898345a
+	base = 850bc2f
 	trimbase = 
 	parent = rpm/hydro/visp_tracker
-	previous = 
+	previous = 898345a
