--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e7f351c
+	base = a74faf3
 	trimbase = 
 	parent = release/hydro/vision_visp
-	previous = 
+	previous = e7f351c
