--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 011a19d
+	base = e300ef0
 	trimbase = 
 	parent = rpm/hydro/vision_visp
-	previous = 
+	previous = 011a19d
