--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_camera_calibration
 	base = fe88125
-	trimbase = 53bf274
+	trimbase = 
 	parent = upstream
 	previous = 36f369f
