--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_camera_calibration
-	base = 3913c94
-	trimbase = 
+	base = 2b541d8
+	trimbase = 3913c94
 	parent = upstream
 	previous = 36e2cea
