--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_hand2eye_calibration
-	base = eafdba3
-	trimbase = 
+	base = 9614243
+	trimbase = eafdba3
 	parent = upstream
 	previous = 36e2cea
