--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = vision_visp
-	base = 0240ef4
-	trimbase = 
+	base = f0891db
+	trimbase = 0240ef4
 	parent = upstream
 	previous = 36e2cea
