--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_auto_tracker
-	base = 2139987
-	trimbase = 
+	base = 583e2a8
+	trimbase = 2139987
 	parent = upstream
 	previous = 36e2cea
