--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_tracker
-	base = bfed59c
-	trimbase = 
+	base = 0af84bc
+	trimbase = bfed59c
 	parent = upstream
 	previous = 36e2cea
