--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_bridge
-	base = f6e399e
-	trimbase = 
+	base = 36cd0cc
+	trimbase = f6e399e
 	parent = upstream
 	previous = 36e2cea
