--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d3b0028
+	base = 9064ad4
 	trimbase = 
 	parent = rpm/indigo/visp_auto_tracker
-	previous = 
+	previous = d3b0028
