--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6a10408
+	base = 3d9f2b0
 	trimbase = 
 	parent = rpm/indigo/visp_hand2eye_calibration
-	previous = 
+	previous = 6a10408
