--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6b8f5e4
+	base = 197cf76
 	trimbase = 
 	parent = rpm/indigo/visp_bridge
-	previous = 
+	previous = 6b8f5e4
