--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7fe45b4
+	base = 94894ca
 	trimbase = 
 	parent = rpm/indigo/visp_camera_calibration
-	previous = 
+	previous = 7fe45b4
