--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4a57389
+	base = 6dc6ddf
 	trimbase = 
 	parent = rpm/indigo/visp_tracker
-	previous = 
+	previous = 4a57389
