--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c05ba8d
+	base = 23e0ed3
 	trimbase = 
 	parent = rpm/indigo/vision_visp
-	previous = 
+	previous = c05ba8d
